Simplify method declarations.